@@ -1,3 +1,10 @@
+2005-08-13  Ulrich Drepper  <drepper@redhat.com>
+
+	* elf_begin.c (get_shnum): Optimize memory handling.  Always read from
+	mapped file if available.  Fix access to 64-bit sh_size.  Recognize
+	overflow.
+	(file_read_elf): Likewise.
+
 2005-08-12  Roland McGrath  <roland@redhat.com>
 
 	* elf32_offscn.c: Do not match empty sections at OFFSET unless
